--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,3 +25,47 @@
 #container a {
   text-decoration: none;
 }
+
+.welcome-container {
+  text-align: center;
+  margin: 20px 0;
+  
+  h2 {
+    color: var(--ion-color-primary);
+  }
+}
+
+.button-container {
+  margin-top: 20px;
+  
+  ion-button {
+    margin-bottom: 10px;
+  }
+}
+
+// Estilos para Material DatePicker
+.full-width {
+  width: 100%;
+  margin: 16px 0;
+  background-color: white;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+mat-form-field {
+  width: 100%;
+  
+  .mat-mdc-form-field {
+    width: 100%;
+  }
+}
+
+::ng-deep {
+  .mat-datepicker-content {
+    background-color: white !important;
+  }
+  
+  .mat-calendar {
+    background-color: white !important;
+  }
+}
