--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <div class="login-container">
+    <ion-item>
+      <ion-input
+        label="Usuario"
+        labelPlacement="floating"
+        [(ngModel)]="usuario"
+        maxlength="8"
+        placeholder="Ingrese usuario"
+      ></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-input
+        label="Contraseña"
+        labelPlacement="floating"
+        type="password"
+        [(ngModel)]="password"
+        maxlength="4"
+        placeholder="****"
+      ></ion-input>
+    </ion-item>
+
+    <ion-button expand="block" (click)="ingresar()">
+      Ingresar
+    </ion-button>
+  </div>
 </ion-content>
