--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,59 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+.mat-datepicker-popup {
+  z-index: 10000 !important;
+}
+
+.mat-calendar {
+  background-color: white !important;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  color: #000000 !important;
+}
+
+.mat-calendar-body-label,
+.mat-calendar-body-cell-content {
+  color: #000000 !important;
+}
+
+.mat-calendar-table-header th {
+  color: #000000 !important;
+}
+
+.mat-calendar-body-selected {
+  background-color: var(--ion-color-primary) !important;
+  color: white !important;
+}
+
+.mat-calendar-body-today:not(.mat-calendar-body-selected) {
+  border-color: var(--ion-color-primary) !important;
+}
+
+.mat-calendar-body-cell:not(.mat-calendar-body-disabled):hover > .mat-calendar-body-cell-content:not(.mat-calendar-body-selected) {
+  background-color: #e0e0e0 !important;
+  color: #000000 !important;
+}
+
+.mat-calendar-body-disabled > .mat-calendar-body-cell-content {
+  color: #cccccc !important;
+}
+
+.cdk-overlay-backdrop {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
+
+.mat-datepicker-content {
+  background-color: white !important;
+  color: #000000 !important;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.4);
+}
+
+.mat-datepicker-content-container {
+  color: #000000 !important;
+}
+
+.mat-calendar-period-button,
+.mat-calendar-arrow {
+  color: #000000 !important;
+}
