--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -27,6 +27,10 @@
       <ion-button expand="block" (click)="ingresar()">
         Ingresar
       </ion-button>
+
+      <div class="registro-link">
+        <p>¿No tienes cuenta? <a routerLink="/registro">Regístrate aquí</a></p>
+      </div>
     </div>
   </div>
 </ion-content>
